--- a/Clique aqui.html
+++ b/Clique aqui.html
@@ -45,10 +45,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Para Joyce Santos</h1>
-        <p>Você é a razão dos meus sorrisos, a luz dos meus dias e a dona do meu coração. Eu te amo mais do que palavras podem expressar.</p>
+        <h1> Joyce Santos</h1>
+        <p>Você é a razão dos meus sorrisos, a luz dos meus dias e a dona do meu coração. Eu te amo mais do que palavras podem expressar, minha Gatinha linda meu Amor.</p>
         <div class="heart">❤️</div>
-        <p>Clique no link abaixo para ver esta mensagem novamente.</p>
+        <p></p>
         <a href="mensagem.html">Rever Mensagem</a>
     </div>
 </body>
