--- a/Clique aqui.html
+++ b/Clique aqui.html
@@ -49,7 +49,7 @@
         <p>Você é a razão dos meus sorrisos, a luz dos meus dias e a dona do meu coração. Eu te amo mais do que palavras podem expressar, minha Gatinha linda meu Amor.</p>
         <div class="heart">❤️</div>
         <p></p>
-        <a href="mensagem.html">Rever Mensagem</a>
+        <a href="mensagem.html">MEU AMOR</a>
     </div>
 </body>
 </html>
